--- a/app.wxss
+++ b/app.wxss
@@ -85,13 +85,13 @@ button {
 }
 
 .btn {
-    width: 100%;
+    /* width: 100%; */
     height: 90rpx;
     line-height: 90rpx;
     font-size: 30rpx;
     text-align: center;
-    font-weight: bold;
-    border-radius: 50rpx;
+    /* font-weight: bold; */
+    /* border-radius: 50rpx; */
     box-sizing: border-box;
 }
 
@@ -106,7 +106,28 @@ button {
 }
 
 .btn.border {
-    border: 1rpx solid #CF9E73;
+    border: 1rpx solid #FEA90E;
+    color: #FEA90E;
+}
+
+.btn.blue-bcg {
+    background: #3772FB;
+    color: #fff;
+}
+
+.btn.blue-color {
+    background: #EBF2FF;
+    color: #3772FB;
+}
+
+.btn.orange {
+    background: #FEA90E;
+    color: #fff;
+}
+
+.btn.yellow {
+    background: #FFC557;
+    color: #fff;
 }
 
 .xs-btn {
