--- a/pages/audio_detail/audio_detail.wxss
+++ b/pages/audio_detail/audio_detail.wxss
@@ -425,6 +425,10 @@
     background: #fff;
 }
 
+.accordion-group-wrap:first-child {
+    margin-top: 0;
+}
+
 
 /* 导航tab */
 
@@ -608,4 +612,21 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.full-btn {
+    width: 100%;
+    height: 100rpx;
+    line-height: 100rpx;
+    text-align: center;
+    position: relative;
+    font-size: 30rpx;
+}
+
+.full-btn>button {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
