--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -3,7 +3,10 @@
   <view class='user-infos-wrap'>
     <view class='user-infos'>
       <button class="openbtn" wx:if='{{authLevel != 2}}' open-type="getUserInfo" bindgetuserinfo="onGotUserInfo"></button>
-      <image class='header_img' src='{{userInfo && userInfo.avatarUrl? userInfo.avatarUrl:"/images/nologinuser.png"}}'></image>
+      <view class='header_img_wrap' >
+        <image class="img" src='{{userInfo && userInfo.avatarUrl? userInfo.avatarUrl:"/images/nologinuser.png"}}'></image>
+        <view class="vip" wx:if="{{isVip}}">V</view>
+      </view>
       <text class='user-name'>{{userInfo.nickName? userInfo.nickName:"点击头像立即登录" }}</text>
       <view class='row'>
         <image class="sm_icon" src='/images/bookMark_active.png'></image>
@@ -30,13 +33,17 @@
     </view>
   </view>
   <view class="card-wrap">
-      <view class="media-wrap" slot="body" hover-class="none" hover-stop-propagation="false">
-        <wux-media thumb="https://soure.chudianad.com/static/welfare/product/thumbImg/201811161207227287.jpg" thumb-style="" title="汗牛书屋7天畅听卡" label="全场书籍免费无限听">
-          <view class="btn-wrap center-right" data-appid="{{item.appid}}" data-path="{{item.path}}" slot>
-            <view class="sm-btn btn" bindtap="bindReceive">领取</view>
-          </view>
-        </wux-media>
-      </view>
+    <view class="media-wrap" slot="body" hover-class="none" hover-stop-propagation="false">
+      <wux-media thumb="https://soure.chudianad.com/static/welfare/product/thumbImg/201811161207227287.jpg" thumb-style="" title="汗牛书屋7天畅听卡" label="全场书籍免费无限听">
+        <view class="time" >
+          {{Vip.endTime}}到期
+        </view>
+        <view class="btn-wrap center-right" data-appid="{{item.appid}}" data-path="{{item.path}}" slot>
+          <view class="btn blue-color" wx:if="{{isVip}}">已领取</view>
+          <view class="btn blue-color" wx:else bindtap="bindReceive">领取</view>
+        </view>
+      </wux-media>
+    </view>
   </view>
   <view class="menu-wrap">
     <view class="menu">
@@ -83,3 +90,6 @@
     </view>
   </view>
 </view>
+
+<!-- 领取会员卡 -->
+<popupMemCard modal-hidden="{{isMenCard}}" ></popupMemCard>
