--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -38,13 +38,35 @@
     z-index: 2;
 }
 
-.header_img {
+.header_img_wrap {
+    /* height: 130rpx;
+    width: 130rpx; */
+    position: relative;
+    /* border-radius: 50%; */
+    /* overflow: hidden; */
+    /* background: #ccc; */
+}
+
+.header_img_wrap .img {
     height: 130rpx;
     width: 130rpx;
     border-radius: 50%;
     overflow: hidden;
     z-index: 1;
     background: #ccc;
+}
+
+.header_img_wrap .vip {
+    width: 50rpx;
+    height: 50rpx;
+    line-height: 50rpx;
+    position: absolute;
+    right: 0;
+    bottom: 6rpx;
+    background: #FEAC43;
+    color: #ffffff;
+    border-radius: 50%;
+    text-align: center;
 }
 
 .user-name {
@@ -57,7 +79,7 @@
 }
 
 .num {
-    color: #cf9f73;
+    color: #FC9B4D;
     font-weight: bold;
     padding: 0 8rpx;
 }
@@ -100,15 +122,12 @@
     padding: 0 30rpx;
 }
 
-.sm-btn {
-    width: 130rpx;
+.media-wrap .btn {
     height: 60rpx;
     line-height: 60rpx;
     border-radius: 30rpx;
     font-size: 30rpx;
-    color: #fff;
-    padding: 0 10rpx;
-    background: linear-gradient(to right, #e2c597, #cf9f73);
+    padding: 0 30rpx;
 }
 
 .media-wrap {
