--- a/pages/reading/reading.wxml
+++ b/pages/reading/reading.wxml
@@ -10,14 +10,17 @@
       </view>
     </block>
   </scroll-view>
+  <!-- 非会员 hidden="{{isVip}}" -->
   <view class="card-wrap">
-      <view class="media-wrap" slot="body" hover-class="none" hover-stop-propagation="false">
-        <wux-media thumb="https://soure.chudianad.com/static/welfare/product/thumbImg/201811161207227287.jpg" thumb-style="" title="汗牛书屋7天畅听卡" label="全场书籍免费无限听">
-          <view class="btn-wrap center-right" data-appid="{{item.appid}}" data-path="{{item.path}}" slot>
-            <view class="sm-btn btn" bindtap="bindReceive">领取</view>
-          </view>
-        </wux-media>
-      </view>
+    <view class="media-wrap" slot="body" hover-class="none" hover-stop-propagation="false">
+      <wux-media thumb="https://soure.chudianad.com/static/welfare/product/thumbImg/201811161207227287.jpg" thumb-style="" title="汗牛书屋7天畅听卡" label="全场书籍免费无限听">
+        <view class="time">{{Vip.endTime}}到期</view>
+        <view class="btn-wrap center-right" slot>
+          <view class="sm-btn btn blue-color" wx:if="{{isVip}}">已领取</view>
+          <view class="sm-btn btn blue-color" wx:else bindtap="bindReceive">领取</view>
+        </view>
+      </wux-media>
+    </view>
   </view>
   <view class='tab-content'>
     <block wx:for="{{contentList}}" wx:for-index="index" wx:key="index">
@@ -41,11 +44,14 @@
                     <text>17</text>
                   </block>
                 </view>
+                <view class='share' data-shareurl="{{item[8]}}" data-shareArtid="{{item[0]}}" catchtap="showShareBoard">
+                  <image class='xs_icon' src="/images/share-icon.png"></image>
+                </view>
               </view>
               <!-- <view class="share">阅读{{item[9]}}</view> -->
-              <view class='share' data-shareurl="{{item[8]}}" data-shareArtid="{{item[0]}}" catchtap="showShareBoard">
+              <!-- <view class='share' data-shareurl="{{item[8]}}" data-shareArtid="{{item[0]}}" catchtap="showShareBoard">
                 <image class='xs_icon' src="/images/share-icon.png"></image>
-              </view>
+              </view> -->
             </view>
           </view>
           <image class='item-img' src="{{item[2]}}"></image>
@@ -71,3 +77,4 @@
   </view>
   <view class='btn-know' bindtap='hideReadTips'>知道了</view>
 </view>
+<popupMemCard modal-hidden="{{isMenCard}}"></popupMemCard>
