--- a/app.wxss
+++ b/app.wxss
@@ -134,6 +134,7 @@ button {
     width: 188rpx;
     height: 63rpx;
     line-height: 63rpx;
+    border-radius: 50rpx;
 }
 
 .sm-btn {
@@ -178,8 +179,17 @@ button {
 }
 
 .row {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     position: relative;
+}
+
+.row.center {
+    justify-content: center;
+}
+
+.row.between {
+    justify-content: space-between;
 }
