--- a/pages/cut_down/cut_down.wxss
+++ b/pages/cut_down/cut_down.wxss
@@ -1,5 +1,9 @@
     /* pages/cut_down/cut_down.wxss */
     
+    .container {
+        padding-bottom: 30rpx;
+    }
+    
     .pro-info-wrap {
         width: 100%;
         box-sizing: border-box;
@@ -16,22 +20,27 @@
         border-bottom: 1rpx solid #C0C2D6;
         padding: 40rpx 0;
         /* width: 100%; */
+        position: relative;
+        justify-content: space-between;
     }
     
     .img {
-        width: 182rpx;
-        height: 236rpx;
-        background: #cccccc;
+        width: 180rpx;
+        height: 250rpx;
+        background: #C0C2D6;
         border-radius: 20rpx;
+        /* position: absolute;
+        left: 0; */
     }
     
     .info-body {
-        padding: 0 30rpx;
+        padding: 0 20rpx;
         box-sizing: border-box;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         justify-content: space-between;
+        width: 500rpx;
     }
     
     .info-body .name {
@@ -87,6 +96,17 @@
     
     .btn-cointainer {
         margin: 60rpx 0;
+        position: relative;
+    }
+    
+    .openbtn {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background: transparent;
+        z-index: 1;
     }
     
     .main-btn {
@@ -151,3 +171,27 @@
         margin-top: 10rpx;
     }
     /* 列表媒体对象end */
+    /* 弹窗按钮 */
+    
+    .modal-content .btn {
+        width: 384rpx;
+        height: 80rpx;
+        line-height: 80rpx;
+        color: #fff;
+        font-size: 30rpx;
+        border-radius: 50rpx;
+        margin: 30rpx auto;
+        text-align: center;
+    }
+    
+    .modal-content .btn.active {
+        /* background: linear-gradient(to right, #e2c597, #cf9f73); */
+        background: #FFAA0F;
+        color: #fff;
+        border: none;
+    }
+    
+    .modal-content .btn.border {
+        border: 1rpx solid #FFAA0F;
+        color: #FFAA0F;
+    }
