--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -8,7 +8,7 @@
         <view class="vip" wx:if="{{isVip}}">V</view>
       </view>
       <text class='user-name'>{{userInfo.nickName? userInfo.nickName:"点击头像立即登录" }}</text>
-      <view class='row'>
+      <view class='row center'>
         <image class="sm_icon" src='/images/bookMark_active.png'></image>
         <view class='infos-desc'>
           <text>已有</text>
@@ -35,8 +35,8 @@
   <view class="card-wrap">
     <view class="media-wrap" slot="body" hover-class="none" hover-stop-propagation="false">
       <wux-media thumb="https://soure.chudianad.com/static/welfare/product/thumbImg/201811161207227287.jpg" thumb-style="" title="汗牛书屋7天畅听卡" label="全场书籍免费无限听">
-        <view class="time" >
-          {{Vip.endTime}}到期
+        <view class="time" wx:if="{{isVip}}">
+          {{Vip.endTime}} 到期 
         </view>
         <view class="btn-wrap center-right" data-appid="{{item.appid}}" data-path="{{item.path}}" slot>
           <view class="btn blue-color" wx:if="{{isVip}}">已领取</view>
