--- a/pages/orderlist/orderlist.wxml
+++ b/pages/orderlist/orderlist.wxml
@@ -6,16 +6,17 @@
       <view class='list'>
         <block wx:for="{{orderInfos}}" wx:key="{{index}}">
           <view class="list-item">
-            <view bindtap='{{item[2] == 12?"":"detailOrder"}}' data-orderId='{{item[1]}}'>
+          <!-- bindtap='{{item[2] == 12?"":"detailOrder"}}' -->
+            <view  data-orderId='{{item[1]}}'>
               <view class="item-headerview">
                 <view class="headerview-wrap">
-                  <text class='ordercode'>订单号 : {{item[1]}}</text>
+                  <!-- <text class='ordercode'>订单号 : {{item[1]}}</text> -->
                 </view>
                 <!-- 根据订单状态展示不同信息 -->
                 <view class="status doing" wx:if='{{item[2] == 2 || item[2] == 4}}'>进行中</view>
-                <view class="status conment" wx:elif='{{item[2] == 5}}'>待评价</view>
-                <view class="status done" wx:elif='{{item[2] == 13 || item[2] == 12}}'>已完成</view>
-                <view class="status done" wx:elif='{{item[2] == 14 }}'>砍价中</view>
+                <view class="status done" wx:elif='{{item[2] == 5}}'>已完成</view>
+                <view class="status done" wx:elif='{{item[2] == 13 || item[2] == 12 }}'>已完成</view>
+                <view class="status conment" wx:elif='{{item[2] == 14 }}'>砍价中</view>
               </view>
               <view class="item-body">
                 <image class="img" src="{{item[5]}}" mode='scaleToFill' />
@@ -25,13 +26,13 @@
                     <image class="sm_icon" src='/images/bookMark_active.png'></image>
                     <!-- <text class="orderPrice" wx:if="{{item[7]}}"><text class="pricenum" >{{item[7]}}</text>位好友</text>
                     <text class="orderPrice" wx:if="{{item[6]}}"><text class="pricenum" >{{item[6]}}</text>元</text> -->
-                    <text class="orderPrice" wx:if="{{item[10]}}">书签所需<text class="pricenum">{{item[10]}}</text>张</text>
+                    <text class="orderPrice">书签所需<text class="pricenum">{{item[10] || 0}}</text>张</text>
                   </view>
                   <view class='view-detail' wx:if="{{item[2] == 12}}">
                     <navigator open-type='navigate' path='{{item[11]}}' app-id='{{item[12]}}'  target="miniProgram" hover-class="none" class='' style="color: #cf9f73" >前往领取></navigator>
                   </view>
-                  <view wx:elif="item[2] == 14" class='view-detail' data-orderId='{{item[1]}}' catchtap='toCutDown'>查看砍价进度></view>
-                  <view wx:else class='view-detail' data-orderId='{{item[1]}}' catchtap='detailOrder'>查看订单></view>
+                  <view wx:elif="{{item[2] == 14}}" class='view-detail' data-orderId='{{item[1]}}' catchtap='toCutDown'>查看砍价进度></view>
+                  <view wx:else class='view-detail' data-orderid='{{item[1]}}' data-pid="{{item[8]}}" data-bookid="{{item[13]}}" catchtap='detailOrder'>查看详情></view>
                 </view>
               </view>
             </view>
