--- a/pages/cut_down/cut_down.wxml
+++ b/pages/cut_down/cut_down.wxml
@@ -113,4 +113,4 @@
 <!-- 兑换成功 -->
 <popupPro modal-hidden="{{successModal}}" modal-title="解锁成功" tips="书籍已放入【我的书架】" modal-type="success" bindonPlayNow="playNow" bindtoBookShelf="toBookShelf"></popupPro>
 <!-- helpCutPopup成功 -->
-<popupPro modal-hidden="{{helpCutPopup}}" modal-title="" tips="你成功帮好友砍了{{cutGold}}标签" modal-type="helpCut" bindonConfirm="toAudioDetail" bindonCancel="toIndex"></popupPro>
+<popupPro modal-hidden="{{helpCutPopup}}" modal-title="帮砍成功" tips="你成功帮好友砍了{{cutGold}}标签" modal-type="helpCut" bindonConfirm="toAudioDetail" bindonCancel="toIndex"></popupPro>
