--- a/pages/audio_detail/audio_detail.wxss
+++ b/pages/audio_detail/audio_detail.wxss
@@ -63,18 +63,19 @@
 }
 
 .rotate-disk {
-    width: 200rpx;
-    height: 300rpx;
     position: relative;
-    /* top: -50rpx; */
-    /* border-radius: 50%; */
     overflow: hidden;
-    /* border: 20rpx solid rgba(54, 43, 41, 0.2); */
+    /* width: 184rpx;
+    height: 246rpx; */
+    width: 226rpx;
+    height: 300rpx;
+    border-radius: 10rpx;
+    box-shadow: 4rpx 4rpx 20rpx 4rpx #eee9e5;
 }
 
 .poster {
-    width: 200rpx;
-    height: 300rpx;
+    width: 100%;
+    height: 100%;
 }
 
 .rotate-360 {
