--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,5 @@
 <!-- index.wxml -->
+<import src="../../wxParse/wxParse.wxml" />
 <view class="container">
   <scroll-view scroll-y="true" style="height: {{windowHeight}}px;" scroll-with-animation="true" bindscrolltolower="loadMoreData" scroll-into-view="{{toView}}">
     <!-- 轮播图 -->
@@ -6,7 +7,7 @@
       <swiper class='banner' indicator-dots="{{false}}" autoplay="{{false}}" previous-margin="60rpx" next-margin="60rpx" circular='{{false}}' bindchange="onSwiperChange" bindanimationfinish="onSwiperAnimationFinish">
         <block wx:for="{{bannerData}}" wx:key="">
           <block wx:if="{{item.composeType == 1}}">
-            <swiper-item>
+            <swiper-item style="padding-top: 20rpx;">
               <view class="card-wrap">
                 <view class="card-title">{{item.name}}</view>
                 <view class="card-body">
@@ -28,30 +29,36 @@
                   </view>
                 </view>
                 <view class="btn-container">
-                  <view class="btn large-btn blue-bcg" data-gtitle="{{item.name}}" data-groupid="{{item.id}}" catchtap="toShareDetail">
+                  <view class="btn large-btn active" data-gtitle="{{item.name}}" data-groupid="{{item.id}}" catchtap="toShareDetail">
                     免费领取
                   </view>
                 </view>
               </view>
             </swiper-item>
           </block>
-          <block wx:if="{{item.composeType == 3}}">
-            <swiper-item wx:for="{{item.children}}" wx:key="key">
+          <block wx:if="{{item.composeType != 1}}">
+            <swiper-item wx:for="{{item.children}}" wx:key="key" style="padding-top: 20rpx;">
               <view class="card-wrap">
                 <view class="card-body">
                   <view class="card-infos">
                     <image class="img" src="{{item.thumbImg}}" mode="aspectFit|aspectFill|widthFix" lazy-load="false" binderror="" bindload=""></image>
                     <view class="title">{{item.productName}}</view>
                     <view class="author">{{item.author}}</view>
-                    <view class="price">{{item.gold}}书签/本</view>
-                    <view class="desc">{{item.productIntroduction}}</view>
+                    <!-- <view class="price">{{item.gold}}书签/本</view> -->
+                    <view class="desc">
+                      {{item.productIntroduction}}
+                    </view>
                   </view>
                 </view>
                 <view class="btn-container">
-                  <!-- <view class="large-btn">点击兑换</view> -->
+                  <view class="btn large-btn active" data-id="{{item.id}}" bindtap="bindClickCard">
+                    点击收听
+                  </view>
                   <view class="link-wrap">
-                    <text class="link-item" data-id="{{item.id}}" bindtap="bindClickCard">去试听</text>
-                    <text class="link-item" bindtap="toShopMall">看更多</text>
+                    <text class="link-item" data-pid="{{item.id}}" bindtap="postOrderSubmit">
+                      放书架
+                    </text>
+                    <text class="link-item" bindtap="toShopMall">逛书城</text>
                   </view>
                 </view>
               </view>
