--- a/pages/audio_detail/audio_detail.wxss
+++ b/pages/audio_detail/audio_detail.wxss
@@ -9,10 +9,11 @@
     padding-bottom: 100rpx;
 }
 
-.btn.active {
+
+/* .btn.active {
     background: #1393FC;
     font-weight: normal;
-}
+} */
 
 
 /* 播放器样式start */
@@ -99,12 +100,16 @@
     }
 }
 
+.a {
+    justify-content: center;
+}
+
 
 /* 操作 */
 
 .title-container {
     position: relative;
-    height: 100rpx;
+    /* height: 100rpx; */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -127,6 +132,7 @@
     color: #A6A09F;
     text-align: center;
     margin: 10rpx 0;
+    width: 600rpx;
 }
 
 .slider-container {
@@ -186,7 +192,8 @@
     height: 110rpx;
     margin: 0;
     padding: 0;
-    background: #1264FE;
+    /* background: #1264FE; */
+    background: linear-gradient(to right, #792EF3, #262DFC);
     border-radius: 50%;
     position: relative;
 }
@@ -357,7 +364,7 @@
     border: 2rpx solid #E7F4FF;
     background: #E7F4FF;
     font-size: 26rpx;
-    margin-right: 16rpx;
+    /* margin-right: 16rpx; */
     cursor: pointer;
     white-space: nowrap
 }
@@ -630,4 +637,136 @@
     position: absolute;
     top: 0;
     left: 0;
+}
+
+
+/* 显示两行字 */
+
+.ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    padding-top: 10rpx;
+    -webkit-box-orient: vertical
+}
+
+.open-ellipsis {
+    overflow: visible;
+}
+
+
+/* 弹出面板 */
+
+.large-btn {
+    margin: 10rpx 20rpx;
+    border-radius: 50rpx;
+}
+
+.modal-mask {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    overflow: hidden;
+    z-index: 1000;
+    color: #fff;
+}
+
+.modal {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%);
+    width: 100%;
+    height: 740rpx;
+    z-index: 1001;
+    background: #fff;
+}
+
+.vertical-item {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 30rpx 0rpx 30rpx 10rpx;
+    border-bottom: 1rpx solid #e5e5e5;
+    margin: 0 30rpx;
+    box-sizing: border-box;
+}
+
+.vertical-item .info {
+    position: relative;
+    height: 246rpx;
+    width: 480rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 20rpx;
+}
+
+.vertical-item .info .title {
+    font-size: 30rpx;
+    font-weight: bold;
+    color: #000;
+    margin-bottom: 30rpx;
+}
+
+.vertical-item .info .desc {
+    font-size: 28rpx;
+    color: #a5a5ac;
+    height: 70rpx;
+    overflow: hidden;
+    display: -webkit-box;
+    white-space: initial;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.vertical-item .img {
+    width: 184rpx;
+    height: 246rpx;
+    border-radius: 10rpx;
+    box-shadow: 0rpx 0rpx 10rpx 0rpx #eee9e5;
+}
+
+.infos-desc {
+    display: inline-block;
+    color: #8C8C94;
+}
+
+.num {
+    color: #3773FA;
+    font-weight: bold;
+    padding-right: 8rpx;
+}
+
+.cell-wrap {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cell-title {
+    margin-right: 10rpx;
+}
+
+.cell-title.disabled {
+    color: #8C8C94;
+}
+
+.slot-cell {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.modal .btn-container {
+    position: absolute;
+    bottom: 0;
 }
