--- a/pages/cut_down/cut_down.wxml
+++ b/pages/cut_down/cut_down.wxml
@@ -11,7 +11,7 @@
       <view class="info-body">
         <view class="">
           <view class="name">{{orderInfo.productName}}</view>
-          <view class="desc"></view>
+          <view class="desc">{{}}</view>
         </view>
         <view class="row between">
           <!-- <view class="">砍价发起时间:{{orderInfo.orderTime}}</view> -->
@@ -33,10 +33,15 @@
       </view>
     </view>
   </view>
+  <view class="account-wrap">
+      <view class="account">
+          
+      </view>
+  </view>
   <view class="operation-wrap">
     <view class="slider-wrap">
       <view class="slider-text" wx:if="{{percent < 100}}">
-        已砍{{bargain.haveBargainGold}}书签,还差{{bargain.gold-bargain.haveBargainGold}}书签
+        已助力{{bargain.haveBargainGold}}书签,还可助力{{bargain.gold-bargain.haveBargainGold}}书签
       </view>
       <view class="slider-text" wx:else>已砍满{{bargain.haveBargainGold}}书签</view>
       <view class="slider">
@@ -45,20 +50,20 @@
     </view>
     <view class="btn-cointainer">
       <button class="openbtn" wx:if='{{authLevel != 2}}' open-type="getUserInfo" bindgetuserinfo="onGotUserInfo"></button>
-      <block wx:if="{{bargainDetails.length == 1 && sharetime != 3 && !timeOver &&  percent < 100}}">
-        <view class="btn orange main-btn share-btn">
+      <!-- <block wx:if="{{bargainDetails.length == 1 && sharetime != 3 && !timeOver &&  percent < 100}}">
+        <view class="btn active main-btn share-btn">
           转发群，可多砍一刀
           <button catch:tap="preventDefault" open-type="share" data-sharetime="2" id="first-share"></button>
         </view>
         <view class="btn border main-btn" bindtap="postOrderSubmit">
           支付{{bargain.gold - bargain.haveBargainGold}}书签解锁
         </view>
-      </block>
-      <block wx:elif="{{bargainDetails.length > 1 && !timeOver && percent < 100 && !inviterUserId || inviterUserId == userInfo.userId}}">
+      </block> -->
+      <block wx:if="{{bargainDetails.length >= 1 && !timeOver && percent < 100 && !inviterUserId || inviterUserId == userInfo.userId}}">
         <view class="a" style="text-align: center">
           预计再邀请{{bargain.estimatedNumber}}人帮忙砍价, 即可免费领取
         </view>
-        <view class="btn orange main-btn share-btn">
+        <view class="btn active main-btn share-btn">
           邀请好友
           <button catch:tap="preventDefault" open-type="share" data-sharetime="3" id="share-cut"></button>
         </view>
@@ -66,36 +71,39 @@
           {{bargain.gold - bargain.haveBargainGold}}书签立刻解锁
         </view>
       </block>
-      <!-- sharetime == 3  -->
+      <!-- sharetime == 3 -->
       <block wx:elif="{{sharetime == 3 && inviterUserId != userInfo.userId && !timeOver && percent < 100}}">
         <view class="a" style="text-align: center">
           预计还需{{bargain.estimatedNumber}}人帮忙砍价, 即可免费解锁
         </view>
-        <view class="btn orange main-btn share-btn" catchtap="helpCut">帮忙砍价</view>
+        <view class="btn active main-btn share-btn" catchtap="helpCut">帮忙砍价</view>
       </block>
       <block wx:elif="{{timeOver && percent < 100}}">
         <view class="a" style="text-align: center">
           当前可使用{{bargain.gold - bargain.haveBargainGold}}书签解锁
         </view>
-        <view class="btn orange main-btn share-btn" bindtap="postOrderSubmit">立刻解锁</view>
+        <view class="btn active main-btn share-btn" bindtap="postOrderSubmit">立刻解锁</view>
       </block>
       <block wx:elif="{{percent >= 100}}">
         <view class="a" style="text-align: center">恭喜您, 砍价成功</view>
-        <view class="btn orange main-btn share-btn" bindtap="postOrderSubmit">0书签解锁</view>
+        <view class="btn active main-btn share-btn" bindtap="postOrderSubmit">0书签解锁</view>
       </block>
     </view>
   </view>
   <view class="record-wrap">
-    <view class="record-title">砍价记录</view>
+    <view class="record-title" wx:if="{{bargain.estimatedNumber>0}}">
+      预计{{bargain.estimatedNumber}}人助力, 即可0书签换书
+    </view>
+    <view class="record-title" wx:else>砍价记录</view>
     <view class="record-list">
       <view class="" style="text-align: center;padding: 20rpx 0" wx:if="{{!bargainDetails.length}}">
         暂无记录
       </view>
       <block wx:for="{{bargainDetails}}" wx:key="key">
         <view class="media-wrap" slot="body" hover-class="none" hover-stop-propagation="false">
-          <wux-media wux-class-title="media-title" thumb="{{item.headimgurl}}" thumb-style="border-radius: 50%" title="{{item.nickName}}" label="{{item.bargainType}}">
+          <wux-media wux-class-title="media-title" wux-class-thumb="headimg" thumb="{{item.headimgurl}}" thumb-style="border-radius: 50%" title="{{item.nickName}}   {{item.bargainType}}" label="">
             <!-- <view class="time">{{Vip.endTime}}</view> -->
-            <view class="label center-right" slot>砍掉{{item.bargainGold}}书签</view>
+            <view class="label center-right" slot>-{{item.bargainGold}}书签</view>
           </wux-media>
         </view>
       </block>
@@ -105,7 +113,9 @@
 <!-- 首次分享窗口firstPopup -->
 <popupPro modal-hidden="{{firstPopup}}" modal-title="首次分享成功" tips="多砍了{{cutGold}}标签" modal-type="1">
   <view class="modal-content" slot hover-class="none" hover-stop-propagation="false">
-    <button class='btn active' open-type="share" data-sharetime="3" id="share-again">继续分享,还可砍一刀</button>
+    <button class='btn active' open-type="share" data-sharetime="3" id="share-again">
+      继续分享,还可砍一刀
+    </button>
     <button class='btn border' bindtap="onClosefirstPopupModal">放弃分享砍价</button>
   </view>
 </popupPro>
