--- a/pages/cut_down/cut_down.wxss
+++ b/pages/cut_down/cut_down.wxss
@@ -136,16 +136,20 @@
         line-height: 100rpx;
         text-align: center;
         border-bottom: 1rpx solid #E1E1E1;
-        color: #232E78;
-        font-size: 36rpx;
+        color: #000;
+        font-size: 30rpx;
         font-weight: bold;
     }
     /* 媒体对象自定义内容 */
     
     .media-title {
-        color: #808080;
-        font-size: 32rpx !important;
-        /* font-weight: normal !important; */
+        color: #C0C0C0;
+        font-size: 30rpx !important;
+        font-weight: normal !important;
+    }
+    .headimg {
+      width: 100rpx !important;
+      height: 100rpx !important;
     }
     
     .center-right {
@@ -160,7 +164,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        color: #232E78;
+        /* color: #232E78; */
+        color: #000;
         font-size: 30rpx;
     }
     
