--- a/pages/cut_down/cut_down.wxml
+++ b/pages/cut_down/cut_down.wxml
@@ -34,9 +34,13 @@
     </view>
   </view>
   <view class="account-wrap">
-      <view class="account">
-          
+    <view class="account">
+      <view class="" selectable="false" space="false" decode="false">
+        <text class="a" style="color: #ccc;">我的余额:</text>
+        <text style="margin-left: 10rpx;color: #000">{{gold}}书签</text>
       </view>
+      <view class="tag btn blue-color" selectable="false" space="false" decode="false">赚书签</view>
+    </view>
   </view>
   <view class="operation-wrap">
     <view class="slider-wrap">
